<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <include
        android:id="@+id/include"
        layout="@layout/top_app_bar" />

    <include
        android:id="@+id/include2"
        layout="@layout/activity_main"/>

    <include
        android:id="@+id/bottom_drawer_include"
        layout="@layout/bottom_drawer"/>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        android:background="@color/primaryColor"
        app:headerLayout="@layout/nav_header"
        app:itemIconPadding="16dp"
        app:itemIconTint="@color/primaryLightColor"
        app:itemTextAppearance="@style/BentonTextViewStyle"
        app:itemTextColor="@color/primaryTextColor"
        app:menu="@menu/nav_menu">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            android:layout_marginStart="16dp">

            <ImageView
                android:id="@+id/footer_item_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="16dp"
                android:src="@drawable/ic_baseline_settings_24" />

            <Button
                android:id="@+id/footer_item_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/logout"
                android:textSize="12dp"
                android:textColor="@color/primaryTextColor" />

            <ImageView
                android:id="@+id/footer_item_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:layout_marginLeft="75dp"
                android:src="@drawable/ic_moon" />

        </LinearLayout>

    </com.google.android.material.navigation.NavigationView>
    
</androidx.drawerlayout.widget.DrawerLayout>
